# python-project-lvl4

./: .codeclimate.yml  .gitignore  Makefile  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  setup.cfg
labels/: forms.py  mixins.py  models.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_label_name.py  0003_alter_label_created_at.py
labels/tests/: test_label.py
labels/views/: edit.py  home.py
seed/: factories.py
statuses/: forms.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_created_at.py
statuses/tests/: test_statuses.py
statuses/views/: edit.py  home.py
task/: .views.py.swp  form.py  forms.py  models.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_auto_20210511_1329.py  0003_status_date_joined.py  0004_auto_20210511_1356.py  0005_auto_20210511_1511.py  0006_alter_task_date_joined.py
task_manager/: .settings.py.swp  mixins.py  settings.py  urls.py
tasks/: filter.py  forms.py  mixins.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_executor.py  0002_auto_20210523_0750.py  0002_initial.py  0003_alter_task_name.py  0003_alter_tasks_labels.py  0003_auto_20210713_1607.py  0003_remove_tasks_author.py  0004_alter_tasks_labels.py  0004_auto_20210531_1132.py  0004_auto_20210611_1908.py  0004_auto_20210714_1607.py  0005_alter_tasks_labels.py  0005_auto_20210531_1150.py  0005_auto_20210729_1902.py  0006_alter_task_executor.py  0006_alter_tasks_labels.py  0006_auto_20210531_1153.py  0007_alter_task_created_at.py  0007_alter_tasks_labels.py  0007_auto_20210531_1548.py  0008_alter_task_options.py  0008_auto_20210524_1305.py  0009_alter_task_options.py
tasks/tests/: test_filter.py  test_tasks.py
tasks/views/: edit.py  home.py
templates/: base.html  bootstrap.html  create.html  creates.html  delete.html  deleting.html  home.html  labels.html  removes.html  statuses.html  task_ticket.html  tasks.html  update.html  updating.html  users.html
templates/registration/: login.html  registration.html
tests/: mixins.py  test_labels.py  test_statuses.py  test_tasks.py  test_user.py  test_users.py
user/: forms.py  messages.py  mixins.py  models.py  urls.py  views.py
utils/: mixins.py
(+26 files in other folders)
